--- a/download version/app/views/front/404.html
+++ b/download version/app/views/front/404.html
@@ -12,21 +12,21 @@
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons - Place favicon.ico in the root directory -->
-  <link rel="apple-touch-icon" sizes="57x57" href="./public/assets/img/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="./public/assets/img/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./public/assets/img/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="./public/assets/img/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="./public/assets/img/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="./public/assets/img/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./public/assets/img/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="./public/assets/img/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./public/assets/img/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./public/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="./public/assets/img/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./public/assets/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="./public/assets/img/favicons/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="../../../public/assets/img/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../../../public/assets/img/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../../../public/assets/img/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../../public/assets/img/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../../../public/assets/img/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../../../public/assets/img/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../../../public/assets/img/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../../../public/assets/img/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../../public/assets/img/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../../public/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../../../public/assets/img/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../../public/assets/img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="../../../public/assets/img/favicons/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./public/assets/img/favicons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="../../../public/assets/img/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <!--==============================
 	  Google Fonts
@@ -38,18 +38,18 @@
 	    All CSS File
 	============================== -->
   <!-- Bootstrap -->
-  <!-- <link rel="stylesheet" href="./public/assets/css/app.min.css"> -->
-  <link rel="stylesheet" href="./public/assets/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="../../../public/assets/css/app.min.css"> -->
+  <link rel="stylesheet" href="../../../public/assets/css/bootstrap.min.css">
   <!-- Fontawesome Icon -->
-  <link rel="stylesheet" href="./public/assets/css/fontawesome.min.css">
+  <link rel="stylesheet" href="../../../public/assets/css/fontawesome.min.css">
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="./public/assets/css/magnific-popup.min.css">
+  <link rel="stylesheet" href="../../../public/assets/css/magnific-popup.min.css">
   <!-- Slick Slider -->
-  <link rel="stylesheet" href="./public/assets/css/slick.min.css">
+  <link rel="stylesheet" href="../../../public/assets/css/slick.min.css">
   <!-- Custom Phone Number Input -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.7.3/build/css/intlTelInput.css">
   <!-- Theme Custom CSS -->
-  <link rel="stylesheet" href="./public/assets/css/style.css">
+  <link rel="stylesheet" href="../../../public/assets/css/style.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
   <div class="preloader">
     <button class="vs-btn preloaderCls">Cancel Preloader </button>
     <div class="preloader-inner">
-      <img src="./public/assets/img/logo.svg" alt="logo">
+      <img src="../../../public/assets/img/logo.svg" alt="logo">
       <span class="loader"></span>
     </div>
   </div>
@@ -75,7 +75,7 @@
   <div class="vs-menu-wrapper">
     <div class="vs-menu-area text-center">
       <div class="mobile-logo">
-        <a href="index.html"><img src="./public/assets/img/logo-white2.svg" alt="Carmax" class="logo"></a>
+        <a href="index.html"><img src="../../../public/assets/img/logo-white2.svg" alt="Carmax" class="logo"></a>
         <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
       </div>
       <div class="vs-mobile-menu">
@@ -173,7 +173,7 @@
       <div class="widget">
         <div class="vs-widget-about">
           <div class="footer-logo">
-            <a href="index.html"><img src="./public/assets/img/logo.svg" alt="Eventino"></a>
+            <a href="index.html"><img src="../../../public/assets/img/logo.svg" alt="Eventino"></a>
           </div>
           <p>
             Ut tellus dolor, dapibus eget, elementum ifend cursus eleifend,
@@ -194,7 +194,7 @@
         <div class="recent-post-wrap">
           <div class="recent-post">
             <div class="media-img">
-              <a href="blog-details.html"><img src="./public/assets/img/blog/recent-post-1-1.jpg" alt="Blog Image"></a>
+              <a href="blog-details.html"><img src="../../../public/assets/img/blog/recent-post-1-1.jpg" alt="Blog Image"></a>
             </div>
             <div class="media-body">
               <h4 class="post-title">
@@ -209,7 +209,7 @@
           </div>
           <div class="recent-post">
             <div class="media-img">
-              <a href="blog-details.html"><img src="./public/assets/img/blog/recent-post-1-2.jpg" alt="Blog Image"></a>
+              <a href="blog-details.html"><img src="../../../public/assets/img/blog/recent-post-1-2.jpg" alt="Blog Image"></a>
             </div>
             <div class="media-body">
               <h4 class="post-title">
@@ -224,7 +224,7 @@
           </div>
           <div class="recent-post">
             <div class="media-img">
-              <a href="blog-details.html"><img src="./public/assets/img/blog/recent-post-1-3.jpg" alt="Blog Image"></a>
+              <a href="blog-details.html"><img src="../../../public/assets/img/blog/recent-post-1-3.jpg" alt="Blog Image"></a>
             </div>
             <div class="media-body">
               <h4 class="post-title">
@@ -239,7 +239,7 @@
           </div>
           <div class="recent-post">
             <div class="media-img">
-              <a href="blog-details.html"><img src="./public/assets/img/blog/recent-post-1-4.jpg" alt="Blog Image"></a>
+              <a href="blog-details.html"><img src="../../../public/assets/img/blog/recent-post-1-4.jpg" alt="Blog Image"></a>
             </div>
             <div class="media-body">
               <h4 class="post-title">
@@ -259,7 +259,7 @@
   <!-- Service Area -->
   <section class="space-top space-bottom">
     <div class="container">
-      <img class="mb-50" src="./public/assets/img/others/404.png" alt="404">
+      <img class="mb-50" src="../../../public/assets/img/others/404.png" alt="404">
       <div class="row">
         <div class="col-lg-7 mx-auto">
           <div class="text-center">
@@ -278,22 +278,22 @@
         All Js File
     ============================== -->
   <!-- Jquery -->
-  <script src="./public/assets/js/vendor/jquery-3.6.0.min.js"></script>
+  <script src="../../../public/assets/js/vendor/jquery-3.6.0.min.js"></script>
   <!-- Slick Slider -->
-  <script src="./public/assets/js/slick.min.js"></script>
+  <script src="../../../public/assets/js/slick.min.js"></script>
   <!-- Bootstrap -->
-  <script src="./public/assets/js/bootstrap.min.js"></script>
+  <script src="../../../public/assets/js/bootstrap.min.js"></script>
   <!-- WOW.js Animation -->
-  <script src="./public/assets/js/wow.min.js"></script>
+  <script src="../../../public/assets/js/wow.min.js"></script>
   <!-- Magnific Popup -->
-  <script src="./public/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="../../../public/assets/js/jquery.magnific-popup.min.js"></script>
   <!-- Isotope Filter -->
-  <script src="./public/assets/js/imagesloaded.pkgd.min.js"></script>
-  <script src="./public/assets/js/isotope.pkgd.min.js"></script>
+  <script src="../../../public/assets/js/imagesloaded.pkgd.min.js"></script>
+  <script src="../../../public/assets/js/isotope.pkgd.min.js"></script>
   <!-- Custom Phone Number Input -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@23.7.3/build/js/intlTelInput.min.js"></script>
   <!-- Main Js File -->
-  <script src="./public/assets/js/main.js"></script>
+  <script src="../../../public/assets/js/main.js"></script>
 </body>
 
 </html>
